<resources>
    <string name="app_name">PaintCanvas</string>

    <!-- String value for title [CHAR LIMIT = 10] -->
    <string name="title">Paint Canvas</string>

    <!-- String value for home screen button [CHAR LIMIT = 20] -->
    <string name="button_home">Start Painting</string>

    <!-- String value for home screen image [CHAR LIMIT = 10] -->
    <string name="img_main">Paint Image</string>

    <!-- String value for draw pointer thickness [CHAR LIMIT = 20] -->
    <string name="thickness_pointer">Select Thickness</string>

    <!-- String value for color [CHAR LIMIT = 10] -->
    <string name="color_select">Select Color</string>

    <!-- String value for set properties button [CHAR LIMIT = 20] -->
    <string name="setProperties_button">Set Properties</string>

    <!-- String value for clear screen button [CHAR LIMIT = 10]-->
    <string name="clearScreen_button">Clear Canvas</string>

    <!-- String value for BLUE color [CHAR LIMIT = 10]-->
    <string name="blue">Blue</string>

    <!-- String value for Yellow color [CHAR LIMIT = 10]-->
    <string name="yellow">Yellow</string>

    <!-- String value for Red color [CHAR LIMIT = 10]-->
    <string name="red">Red</string>

    <!-- String array for line thickness [CHAR LIMIT = 10]-->
    <string-array name="pointer_stroke">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

</resources>