<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/AllText"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        style="@style/AllImage"
        android:layout_margin="12dp"
        android:contentDescription="@string/img_main"
        android:src="@drawable/main_img" />

    <Button
        style="@style/AllButton"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:padding="12dp"
        android:text="@string/button_home"
        android:textColor="@android:color/white" />

</LinearLayout>