<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CanvasActivity">

    <com.iamspd.paintcanvas.CanvasView
        android:id="@+id/myCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="22dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                style="@style/AllText"
                android:layout_width="0dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/thickness_pointer"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinThickness"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp">

            <TextView
                style="@style/AllText"
                android:layout_width="0dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/color_select"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <RadioGroup
                android:id="@+id/rgColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red" />
            </RadioGroup>

        </LinearLayout>

        <Button
            style="@style/AllButton"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccentLight"
            android:onClick="onSetPropertyClick"
            android:padding="12dp"
            android:text="@string/setProperties_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <Button
        style="@style/AllButton"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimary"
        android:onClick="onClearCanvasClick"
        android:padding="12dp"
        android:text="@string/clearScreen_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white" />

</FrameLayout>